# EmbeddedRust

./: .gitignore
breakout-game-Microbitv2/: README.md
breakout-game-Microbitv2/src/: beep.rs  display.rs  game.rs  inputs.rs  knob.rs  main.rs
hello/: Cargo.toml  README.md
hello/.cargo/: config.toml
hw-breakout/: Cargo.toml  README.md  Writeup.md
hw-breakout-mine/: Cargo.toml
hw-breakout-mine/src/: inputs.rs
hw-breakout/src/: beep.rs  button.rs  game.rs  main.rs
life/: Cargo.toml  Embed.toml  README.md
life/src/: life.rs  main.rs
