[package]
name = "breakout"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
embedded-hal = "0.2.7"
libm = "0.2.7"
microbit-v2 = "0.13.0"
rtt-target = "0.4"

[[bin]]
name = "breakout"
test = false
bench = false

[dependencies.panic-rtt-target]
version = "0.1"
features = ["cortex-m"]

# This works around old versions in the `microbit-v2`
# crate. You don't have to use this crate, just linking
# against it is sufficient.
[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]
