[package]
name = "life"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Taormina <taormina@pdx.edu>"]

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"
microbit-v2 = "0.13.0"
#rtt-target = { version = "0.3.1", features = ["cortex-m"] }
#panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
nanorand = { version = "0.7.0", default-features = false, features = ["pcg64"] }

[dev-dependencies]
# Sneak in dependencies for examples which clash with panic-hal when generating
# docs with rustdoc.
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
